--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,10 +1,5 @@
-.container {
-    padding: 0 2rem;
-}
-
 .main {
-    min-height: 100vh;
-    padding: 4rem 0;
+    min-height: calc(100vh - 65px);
     flex: 1;
     display: flex;
     flex-direction: column;
